<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Love Barometer</string>
    <string name="is_it_true_love">Is It True Love?</string>
    <string name="does_he_make_you_smile">Does he make you smile?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="do_you_play_froggie">Do you play Froggie?</string>
    <string name="are_you_his_princess">Are you his Princess?</string>
    <string name="heartbreaks_you">Heartbreaks you?</string>
    <string name="finish">Finish</string>
    <string name="summary">Summary</string>
    <string name="if_you_have_said_only_one_yes_to_the_three_questions">If you have said only one YES to the three questions,</string>
    <string name="then" tools:ignore="DuplicateDefinition">Then,</string>
    <string name="he_is_not_into_you">He is NOT Into YOU!!</string>
    <string name="if_you_have_said_yes_to_two_of_the_three_questions">If you have said YES to two of the three questions,</string>

    <string name="his_love_is_questionable">His LOVE is Questionable!!</string>
    <string name="if_you_have_said_no_to_all_the_three_questions">If you have said NO to ALL the three questions,</string>

    <string name="you_should_not_be_together">You should NOT Be TOGETHER!!</string>
    <string name="but_if_you_have_said_yes_to_all_the_three_questions">BUT If you have said YES to ALL the three questions,</string>

    <string name="he_is_your_one_true_love">HE IS YOUR ONE TRUE LOVE!!</string>
</resources>
