<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="example.com.android.lovebarometer.Main5Activity">


        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            android:background="#9C27B0"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/text2"
        android:layout_below="@id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_you_have_said_only_one_yes_to_the_three_questions"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:background="#00BCD4"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/text3"
        android:layout_below="@id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/then"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:background="#00BCD4"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        tools:targetApi="jelly_bean" />
    <TextView
        android:id="@+id/text4"
        android:layout_below="@id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/he_is_not_into_you"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="#D50000"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:background="#00BCD4"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        tools:targetApi="jelly_bean" />



        <TextView
            android:id="@+id/text5"
            android:layout_below="@id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_you_have_said_yes_to_two_of_the_three_questions"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="#00ACC1"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:targetApi="jelly_bean" />
        <TextView
            android:id="@+id/text6"
            android:layout_below="@id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/then"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="#00ACC1"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:targetApi="jelly_bean" />
        <TextView
            android:id="@+id/text7"
            android:layout_below="@id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/his_love_is_questionable"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#D50000"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="#00ACC1"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:targetApi="jelly_bean" />


            <TextView
                android:id="@+id/text8"
                android:layout_below="@id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/if_you_have_said_no_to_all_the_three_questions"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:background="#0097A7"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                tools:targetApi="jelly_bean" />
            <TextView
                android:id="@+id/text9"
                android:layout_below="@id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/then"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:background="#0097A7"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                tools:targetApi="jelly_bean" />
            <TextView
                android:id="@+id/text10"
                android:layout_below="@id/text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_should_not_be_together"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="#D50000"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:background="#0097A7"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                tools:targetApi="jelly_bean" />


        <TextView
            android:id="@+id/text11"
            android:layout_below="@id/text10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/but_if_you_have_said_yes_to_all_the_three_questions"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="#00838F"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:targetApi="jelly_bean" />
        <TextView
            android:id="@+id/text12"
            android:layout_below="@id/text11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/then"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="#00838F"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:targetApi="jelly_bean" />
        <TextView
            android:id="@+id/text13"
            android:layout_below="@id/text12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/he_is_your_one_true_love"
            android:typeface="serif"
            android:textStyle="bold"
            android:textColor="#D50000"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:background="#00838F"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:targetApi="jelly_bean" />




</RelativeLayout>
</ScrollView>
